# lib/db/src/schema/parametrage.ts
@@ -11,6 +11,7 @@ export const parametrageTable = pgTable("parametrage", {
   mdp_preparateur: text("mdp_preparateur").notNull().default("prep123"),
   mdp_admin: text("mdp_admin").notNull().default("admin123"),
   vente_ouverte: boolean("vente_ouverte").notNull().default(true),
+  allow_reprendre_commande: boolean("allow_reprendre_commande").notNull().default(true),
   updated_at: timestamp("updated_at", { withTimezone: true }).notNull().defaultNow().$onUpdate(() => new Date()),
 });
 
